<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_view"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:background="@color/blue"
        android:clickable="true"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:drawableLeft="@mipmap/ic_launcher"
            android:drawablePadding="15dp"
            android:gravity="center_vertical"
            android:onClick="tvUserIcon"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_menu_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:drawableLeft="@mipmap/collect"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:onClick="tvMyCollect"
            android:text="@string/my_collect"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_menu_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_menu_collect"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:drawableLeft="@mipmap/download"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:onClick="tvMyDownload"
            android:text="@string/my_download"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/menu_recyler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>